--- a/index.html
+++ b/index.html
@@ -16,9 +16,36 @@
     <link rel="shortcut icon" href="assets/img/logo_ACS.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Potfolio ACS</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    
+    <div class="contenedor-header">
+        <header>
+            <div class="logo">
+                <a href="#inicio">
+                    <img src="assets/img/logo_ACS.png" alt="Logo" title="ACS">
+                    <p>{ACS}</p>
+                </a>
+            </div>
+            <div class="menu">
+                <nav id="nav">
+                    <ul>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#sobremi">Sobre mi</a></li>
+                        <li><a href="#habilidades">Habilidades</a></li>
+                        <li><a href="#curriculum">Curriculum</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contacto">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="menu-responsive">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </header>
+    </div>
+
 </body>
 </html>
