change(front): responsive header functions

--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
                 </a>
             </div>
             <div class="menu">
-                <nav id="nav">
+                <nav id="nav" class="">
                     <ul>
-                        <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#sobremi">Sobre mi</a></li>
-                        <li><a href="#habilidades">Habilidades</a></li>
-                        <li><a href="#curriculum">Curriculum</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contacto">Contacto</a></li>
+                        <li><a href="#inicio" onclick="select()">Inicio</a></li>
+                        <li><a href="#sobremi" onclick="select()">Sobre mi</a></li>
+                        <li><a href="#habilidades" onclick="select()">Habilidades</a></li>
+                        <li><a href="#curriculum" onclick="select()">Curriculum</a></li>
+                        <li><a href="#portfolio" onclick="select()">Portfolio</a></li>
+                        <li><a href="#contacto" onclick="select()">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="menu-responsive">
+            <div class="menu-responsive" onclick="toggleMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
     </div>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
