add(front): Inicio section structure and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stiward Araya Calderón">
     <meta name="description" content="Sitio web de presentación profesional">
-    <meta name="keywords" content="dev front-end html html5 css css3 javascript technologia junior desarrollador programacion programador web desarrollo portfolio">
+    <meta name="keywords" content="dev front-end html html5 css css3 javascript technologia junior desarrollador programacion programador web desarrollo portfolio portafolio">
     <meta property="og:title" content="Desarrollador front-end: programador web">
     <meta property="og:description" content="Sitio de presentación profesional, desarrollador front-end junior, contacto">
     <meta property="og:image" content="https://imgur.com/a/iU2djzI">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Potfolio ACS</title>
+    <title>Portfolio ACS</title>
 </head>
 <body>
     
@@ -26,7 +26,7 @@
             <div class="logo">
                 <a href="#inicio">
                     <img src="assets/img/logo_ACS.png" alt="Logo" title="ACS">
-                    <p>{ACS}</p>
+                    <h1>{ACS}</h1>
                 </a>
             </div>
             <div class="menu">
@@ -46,6 +46,23 @@
             </div>
         </header>
     </div>
+
+    <section id="inicio" class="contenedor-inicio">
+
+        <div class="banner">
+            <div class="contenedor-img">
+                <img src="assets/img/Stiward_pfp.jpeg" alt="Imagen stiward" title="ACS">
+            </div>
+            <h2>STIWARD ARAYA</h2>
+            <h3>Estudiante de TI - Junior front-end dev</h3>
+            <div class="redes">
+                <a href="https://github.com/StiwardAraya" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/stiward-araya-8206002a2/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/stiwardaraya/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+
+    </section>
 
     <script src="assets/js/script.js"></script>
 </body>
