--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     </div>
 
     <section id="inicio" class="contenedor-inicio">
-
         <div class="banner">
             <div class="contenedor-img">
                 <img src="assets/img/Stiward_pfp.jpeg" alt="Imagen stiward" title="ACS">
@@ -61,7 +60,89 @@
                 <a href="https://www.instagram.com/stiwardaraya/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
+    </section>
 
+    <section id="sobremi" class="sobremi">
+        <div class="contenedor-sobremi">
+            <h2>Sobre mi</h2>
+            <p>
+                <span>Hola, soy Stiward Araya.</span> 
+                Estudiante de ingeniería en sistemas con pasión por el desarrollo front-end, 
+                busco expandir mis habilidades y conocimientos para contribuir a proyectos relevantes. 
+                Si bien mi formación académica no profundiza en programación web, he cultivado un gran 
+                interés en esta área, especialmente en el ámbito front-end. Aspiro a conectar con profesionales 
+                experimentados y potenciales empleadores para impulsar mi crecimiento profesional.
+            </p>
+            <div class="fila">
+                <div class="col">
+                    <h3>Datos Personales</h3>
+                    <ul>
+                        <li>
+                            <strong>Cumpleaños</strong>
+                            28-12-1998
+                        </li>
+                        <li>
+                            <strong>Teléfono</strong>
+                            +506 7188 8247
+                        </li>
+                        <li>
+                            <strong>Email</strong>
+                            StiwardArayaCalderon98@gmail.com
+                        </li>
+                        <li>
+                            <strong>Website</strong>
+                            [Aun no disponible]
+                        </li>
+                        <li>
+                            <strong>Profesión</strong>
+                            Estudiante de TI
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Intereses</h3>
+                    <div class="contenedor-intereses">
+                        <div class="interes">
+                            <i class="fa-solid fa-gamepad"></i>
+                            <span>JUEGOS</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-music"></i>
+                            <span>MUSICA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-brands fa-windows"></i>
+                            <span>WINDOWS</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-plane-departure"></i>
+                            <span>VIAJES</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-dumbbell"></i>
+                            <span>GYM</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-camera-retro"></i>
+                            <span>FOTOGRAFÍA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-guitar"></i>
+                            <span>GUITARRA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-film"></i>
+                            <span>CINE</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <button>
+                Descargar CV <i class="fa-solid fa-download"></i>
+                <span class="overlay"></span>
+            </button>
+        </div>
     </section>
 
     <script src="assets/js/script.js"></script>
