Change(front): little change in text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </li>
                         <li>
                             <strong>Profesión</strong>
-                            Estudiante de TI
+                            <span>Estudiante de TI</span>
                         </li>
                     </ul>
                 </div>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-camera-retro"></i>
-                            <span>FOTOGRAFÍA</span>
+                            <span>FOTOS</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-guitar"></i>
@@ -134,7 +134,6 @@
                             <i class="fa-solid fa-film"></i>
                             <span>CINE</span>
                         </div>
-
                     </div>
                 </div>
             </div>
