change(front): add 'skills' section html structure

--- a/index.html
+++ b/index.html
@@ -146,6 +146,112 @@
         </div>
     </section>
 
+    <section id="skills" class="skills">
+        <div class="skills-container">
+            <h2>Skills</h2>
+            <div class="fila">
+                <div class="col">
+                    <h3>Technical Skills</h3>
+
+                    <div class="skill">
+                        <span>HTML 5</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>CSS 3</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>65%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>JavaScript</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>30%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>Java</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>45%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>SQL</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>45%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>React</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>5%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <h3>Professional skills</h3>
+
+                    <div class="skill">
+                        <span>Communication</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>Problem-solving</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>80%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>Adaptability</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>Creativity</span>
+                        <div class="skill-bar">
+                            <div class="progress">
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
