Change(front): add 'skills' section styles

--- a/index.html
+++ b/index.html
@@ -149,10 +149,9 @@
     <section id="skills" class="skills">
         <div class="skills-container">
             <h2>Skills</h2>
-            <div class="fila">
+            <div class="row">
                 <div class="col">
                     <h3>Technical Skills</h3>
-
                     <div class="skill">
                         <span>HTML 5</span>
                         <div class="skill-bar">
@@ -161,7 +160,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>CSS 3</span>
                         <div class="skill-bar">
@@ -170,7 +168,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>JavaScript</span>
                         <div class="skill-bar">
@@ -179,7 +176,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>Java</span>
                         <div class="skill-bar">
@@ -188,7 +184,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>SQL</span>
                         <div class="skill-bar">
@@ -197,7 +192,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>React</span>
                         <div class="skill-bar">
@@ -206,11 +200,9 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="col">
                     <h3>Professional skills</h3>
-
                     <div class="skill">
                         <span>Communication</span>
                         <div class="skill-bar">
@@ -219,7 +211,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>Problem-solving</span>
                         <div class="skill-bar">
@@ -228,7 +219,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>Adaptability</span>
                         <div class="skill-bar">
@@ -237,7 +227,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="skill">
                         <span>Creativity</span>
                         <div class="skill-bar">
@@ -246,7 +235,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
