Change(front): add 'curriculum' html structure

--- a/index.html
+++ b/index.html
@@ -240,6 +240,51 @@
         </div>
     </section>
 
+    <section id="curriculum" class="curriculum">
+        <div class="curriculum-container">
+            <h2>CURRICULUM</h2>
+            <div class="row">
+                <div class="col left">
+                    <h3>Education</h3>
+                    <div class="item left-item">
+                        <h4>IT For Bussines</h4>
+                        <span class="house">University of Costa Rica</span>
+                        <span class="date">2017 - 2021</span>
+                        <p>Following my initial IT studies after high school, 
+                        I decided the program wasn't the right fit for my interest 
+                        in a more hands-on approach to the field, so I opted for technical 
+                        training instead.</p>
+                        <div class="conector-l">
+                            <div class="circle-l"></div>
+                        </div>
+                    </div>
+                    <div class="item left-item">
+                        <h4>Systems Engineering</h4>
+                        <span class="house">National University of Costa Rica</span>
+                        <span class="date">2022 - Today</span>
+                        <p>I'm currently engaged in this career (since 2022) to develop 
+                        my skills in programming and build a strong professional profile.</p>
+                        <div class="conector-l">
+                            <div class="circle-l"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col right">
+                    <h3>Professional Experience</h3>
+                    <div class="item right-item">
+                        <h4>No experience yet</h4>
+                        <span class="house"></span>
+                        <span class="date"></span>
+                        <p>Help me filling this list</p>
+                        <div class="conector-r">
+                            <div class="circle-r"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
