Change(front): Add 'portfolio' section html structure

--- a/index.html
+++ b/index.html
@@ -285,6 +285,56 @@
         </div>
     </section>
 
+    <section id="portfolio" class="portfolio">
+        <div class="portfolio-container">
+            <h2>PORTFOLIO</h2>
+            <div class="gallery">
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <div class="overlay">
+                        <h3>No project yet</h3>
+                        <p>Help me filling this square</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
