--- a/index.html
+++ b/index.html
@@ -335,6 +335,43 @@
         </div>
     </section>
 
+    <section id="contact" class="contact">
+        <div class="contact-container">
+            <h2>CONTACT</h2>
+            <div class="row">
+                <div class="col">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Phone Number">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Subject">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button>
+                        Send<i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </div>
+                <div class="col">
+                    <img src="assets/img/Ubicacion.JPG" alt="ubication">
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-earth-americas"></i>
+                                Perez Zeledón, San José, Costa Rica.
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-phone-volume"></i>
+                                Call me: +506 7188 8247
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                Email: StiwardArayaCalderon98@gmail.com
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
