Change(front): Add footer html structure

--- a/index.html
+++ b/index.html
@@ -373,6 +373,17 @@
         </div>
     </section>
 
+    <footer>
+        <a href="#home" class="up">
+            <i class="fa-solid fa-caret-up"></i>
+        </a>
+        <div class="media">
+            <a href="https://github.com/StiwardAraya" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/stiward-araya-8206002a2/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/stiwardaraya/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
