Change(front): Add the JS function to open the CV

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <button onclick="downloadCV">
+            <button onclick="downloadCV()">
                 Download CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </button>
