Change(front): 'Portfolio' section first project update

--- a/index.html
+++ b/index.html
@@ -290,10 +290,13 @@
             <h2>PORTFOLIO</h2>
             <div class="gallery">
                 <div class="project">
-                    <img src="assets/img/overlaySinProyecto.jpg" alt="no project">
+                    <img src="assets/img/presentacion-portfolio.png" alt="no project">
                     <div class="overlay">
-                        <h3>No project yet</h3>
-                        <p>Help me filling this square</p>
+                        <h3>Professional Portfolio</h3>
+                        <p>
+                            Made with basic front-end tools<br>
+                            HTML5 CSS3 JS
+                        </p>
                     </div>
                 </div>
                 <div class="project">
