Change(front): Implement 'toggle' function for the responsive menu & update the code to modern JS conventions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="responsive-menu" onclick="toggleMenu()">
+            <div class="responsive-menu" id="responsive-btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
